--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-이 프로젝트는 2025 동계 CCEL 랩인턴에 사용된 script와 data를 모아두는 장소입니다.
+이 프로젝트는 2025 동계 CCEL 랩인턴에 사용된 script만을 모아두는 장소입니다. (Data는 Google drive에 저장함)
 
